<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainPageTitle"
        android:id="@+id/mainText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="30sp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/mainTextImage"
        android:layout_below="@+id/mainText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:contentDescription="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainPagePlayButton"
        android:id="@+id/mainPagePlay"
        android:layout_above="@+id/mainPageHighScores"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:width="150dp" />

    <Button
        android:id="@+id/mainPageHighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainPageQuit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/mainPageHighScoresButton"
        android:width="150dp" />

    <Button
        android:id="@+id/mainPageQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="76dp"
        android:width="150dp"
        android:text="@string/mainPageQuitButton" />

</RelativeLayout>