<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <Button
        android:id="@+id/gameMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:insetTop="6dp"
        android:text="Back To Menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gameLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameLivesText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:text="Level: "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gameLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gameLevelText"
        android:layout_marginStart="38dp"
        android:layout_toEndOf="@+id/gameLevelText"
        android:text="@string/gameLevel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gameLivesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameMenu"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:text="Lives: "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameLives"
        android:id="@+id/gameLives"
        android:layout_alignTop="@+id/gameLivesText"
        android:layout_toEndOf="@id/gameLivesText"
        android:layout_marginStart="38dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gameScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gameLevelText"
        android:layout_marginStart="38dp"
        android:text="Score: "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameScore"
        android:id="@+id/gameScore"
        android:layout_alignTop="@+id/gameScoreText"
        android:layout_toEndOf="@id/gameScoreText"
        android:layout_marginStart="30dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gameTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gameScoreText"
        android:layout_marginStart="38dp"
        android:text="Timer: "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameTimer"
        android:id="@+id/gameTimer"
        android:layout_alignTop="@+id/gameTimerText"
        android:layout_toEndOf="@id/gameTimerText"
        android:layout_marginStart="30dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questionText"
        android:id="@+id/question"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/gameScoreText"
        android:layout_marginTop="70dp"
        android:textSize="30sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="="
        android:id="@+id/questionEqual"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/question"
        android:textSize="50sp" />

    <Button
        android:id="@+id/answerA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answerB"
        android:layout_centerHorizontal="true"
        android:text="@string/gameAnswerA"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameAnswerB"
        android:id="@+id/answerB"
        android:layout_above="@+id/answerC"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameAnswerC"
        android:id="@+id/answerC"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />



</RelativeLayout>